<resources>
    <string name="app_name">Halls of History</string>
    <string name="package_name">com.example.sda_a4_2024_bradleyweibel</string>

    <!-- General texts -->
    <string name="images_desc">Book Thumb</string>
    <string name="plc_author">Edgar Rice Burroughs</string>
    <string name="plc_title">Tarzan and the Golden Lion</string>
    <string name="border">border item</string>

    <!-- Home tab -->
    <string name="welcome">-- Welcome --</string>
    <string name="welcome_message_part_2">Enjoy our collection of historical epics</string>

    <!-- Books tab -->
    <string name="check_out">Check Out</string>

    <!-- Settings tab -->
    <string name="fragment_header">-- User Details --</string>
    <string name="name_field_text">Name *</string>
    <string name="address_field_text">Street Address *</string>
    <string name="zip_field_text">ZIP Code *</string>
    <string name="town_field_text">Town *</string>
    <string name="phone_field_text">Phone Nr *</string>
    <string name="email_field_text">Email Address *</string>
    <string name="id_field_text">ID</string>
    <string name="save_btn_text">Save</string>
    <string name="clear_btn_text">Clear</string>
    <string name="reset_btn_text">Reset</string>

    <!-- Checkout page -->
    <string name="book_to_checkout">Book:</string>
    <string name="author_to_checkout">Author:</string>
    <string name="availability_checkout">Status:</string>
    <string name="choose_date_button">Select Date</string>
    <string name="send_order_button">Send Order</string>
    <string name="return_book_button">Return Book</string>
    <string name="available_text">(Available)</string>
    <string name="unavailable_text">(Unavailable till</string>
    <string name="reserved_till_text">(Reserved till</string>
    <string name="user_id_text">Your user ID:</string>
    <string name="user_name_text">Your full name:</string>
    <string name="proposed_booked_from_date">Checkout:</string>
    <string name="proposed_booked_till_date">Return:</string>
    <string name="plc_user_id">Username_009</string>
    <string name="plc_user_name">John Doe</string>
    <string name="plc_proposed_booked_from_date">xx.xx.xxxx</string>
    <string name="plc_proposed_booked_till_date">yy.yy.yyyy</string>

    <!-- Toast error messages -->
    <string name="name_missing_error">Please enter your full name</string>
    <string name="name_invalid_error">Please enter your (valid) full name</string>
    <string name="address_missing_error">Please enter your street address</string>
    <string name="address_invalid_error">Please enter your (valid) street address</string>
    <string name="zip_missing_error">Please enter your zip code</string>
    <string name="zip_invalid_error">Please enter your (4/5 digit) zip code</string>
    <string name="town_missing_error">Please enter your town/city</string>
    <string name="town_invalid_error">Please enter your (valid) town/city</string>
    <string name="phone_number_missing_error">Please enter your phone number</string>
    <string name="phone_number_invalid_error">Please enter your (10 digit) phone number</string>
    <string name="email_missing_error">Please enter your email address</string>
    <string name="email_invalid_error">Please enter your (valid) email address</string>
    <string name="missing_account_error">No account details found</string>
    <string name="create_account_error">Please create an account</string>
    <string name="passed_date_error">Your chosen date has already passed</string>

    <!-- Toast success messages -->
    <string name="details_saved">Account successfully created/updated</string>
    <string name="details_reset">Account details reset</string>
    <string name="success_book_reserved">Success, the book is yours!</string>
</resources>
